Add '24w14potato' sources